canary/podinfo-ingress.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: podinfo-ingress
  namespace: test
spec:
  virtualhost:
    fqdn: app.famintos.tanzu.biz
  includes:
    - name: podinfo
      namespace: test
      conditions:
        - prefix: /
